--- a/pom.xml
+++ b/pom.xml
@@ -16,34 +16,17 @@
     </licenses>
 
     <properties>
+        <encoding>UTF-8</encoding>
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
-        <encoding>UTF-8</encoding>
-        <scala.version>2.10</scala.version>
+        <scala-language-level>2.11</scala-language-level>
     </properties>
 
-    <!--
-      <repositories>
-        <repository>
-          <id>scala-tools.org</id>
-          <name>Scala-Tools Maven2 Repository</name>
-          <url>http://scala-tools.org/repo-releases</url>
-        </repository>
-      </repositories>
-
-      <pluginRepositories>
-        <pluginRepository>
-          <id>scala-tools.org</id>
-          <name>Scala-Tools Maven2 Repository</name>
-          <url>http://scala-tools.org/repo-releases</url>
-        </pluginRepository>
-      </pluginRepositories>
-    -->
     <dependencies>
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
-            <version>${scala.version}.0</version>
+            <version>${scala-language-level}.1</version>
         </dependency>
 
         <!-- Test -->
@@ -53,22 +36,23 @@
             <version>4.11</version>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>org.scalacheck</groupId>
-            <artifactId>scalacheck_2.10</artifactId>
+            <artifactId>scalacheck_${scala-language-level}</artifactId>
             <version>1.11.5</version>
         </dependency>
 
         <dependency>
             <groupId>org.specs2</groupId>
-            <artifactId>specs2_2.10</artifactId>
-            <version>2.4.1</version>
+            <artifactId>specs2_${scala-language-level}</artifactId>
+            <version>2.3.13</version>
         </dependency>
 
         <dependency>
             <groupId>org.scalatest</groupId>
-            <artifactId>scalatest_2.10</artifactId>
-            <version>2.2.1</version>
+            <artifactId>scalatest_${scala-language-level}</artifactId>
+            <version>2.2.0</version>
         </dependency>
 
     </dependencies>
@@ -89,7 +73,6 @@
                         </goals>
                         <configuration>
                             <args>
-                                <arg>-make:transitive</arg>
                                 <arg>-dependencyfile</arg>
                                 <arg>${project.build.directory}/.scala_dependencies</arg>
                             </args>
