--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,11 @@
             <version>2.3.3</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>casbah_${scala-language-level}</artifactId>
+            <version>2.7.2</version>
+        </dependency>
     </dependencies>
 
     <build>
