--- a/pom.xml
+++ b/pom.xml
@@ -19,16 +19,9 @@
         <encoding>UTF-8</encoding>
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
-        <scala-language-level>2.11</scala-language-level>
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>org.scala-lang</groupId>
-            <artifactId>scala-library</artifactId>
-            <version>${scala-language-level}.1</version>
-        </dependency>
-
         <!-- Test -->
         <dependency>
             <groupId>junit</groupId>
@@ -36,86 +29,12 @@
             <version>4.11</version>
             <scope>test</scope>
         </dependency>
-
-        <dependency>
-            <groupId>org.scalacheck</groupId>
-            <artifactId>scalacheck_${scala-language-level}</artifactId>
-            <version>1.11.5</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.specs2</groupId>
-            <artifactId>specs2_${scala-language-level}</artifactId>
-            <version>2.3.13</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.scalatest</groupId>
-            <artifactId>scalatest_${scala-language-level}</artifactId>
-            <version>2.2.0</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.scalamock</groupId>
-            <artifactId>scalamock-core_2.11</artifactId>
-            <version>3.1.2</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.scalamock</groupId>
-            <artifactId>scalamock-scalatest-support_2.11</artifactId>
-            <version>3.1.2</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.typesafe.play</groupId>
-            <artifactId>play-json_${scala-language-level}</artifactId>
-            <version>2.3.3</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mongodb</groupId>
-            <artifactId>casbah_${scala-language-level}</artifactId>
-            <version>2.7.2</version>
-        </dependency>
     </dependencies>
 
     <build>
-        <sourceDirectory>src/main/scala</sourceDirectory>
-        <testSourceDirectory>src/test/scala</testSourceDirectory>
+        <sourceDirectory>src/main/java</sourceDirectory>
+        <!--<testSourceDirectory>src/test/scala</testSourceDirectory>-->
         <plugins>
-            <plugin>
-                <groupId>org.scala-tools</groupId>
-                <artifactId>maven-scala-plugin</artifactId>
-                <version>2.15.0</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>compile</goal>
-                            <goal>testCompile</goal>
-                        </goals>
-                        <configuration>
-                            <args>
-                                <arg>-dependencyfile</arg>
-                                <arg>${project.build.directory}/.scala_dependencies</arg>
-                            </args>
-                        </configuration>
-                    </execution>
-                </executions>
-                <configuration>
-                    <launchers>
-                        <launcher>
-                            <id>sample</id>
-                            <mainClass>ro.jtonic.handson.scalatest.App</mainClass>
-                            <args>
-                                <arg>${basedir}</arg>
-                            </args>
-                        </launcher>
-                    </launchers>
-                </configuration>
-            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -127,18 +46,146 @@
                     <!-- useManifestOnlyJar>false</useManifestOnlyJar -->
                     <includes>
                         <include>**/*Test.*</include>
-                        <include>**/*Suite.*</include>
-                        <include>**/*Spec.*</include>
                     </includes>
                 </configuration>
             </plugin>
         </plugins>
     </build>
 
+    <profiles>
+        <profile>
+            <id>scala-test</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+
+            <properties>
+                <scala-language-level>2.11</scala-language-level>
+            </properties>
+
+            <dependencies>
+                <dependency>
+                    <groupId>org.scala-lang</groupId>
+                    <artifactId>scala-library</artifactId>
+                    <version>${scala-language-level}.1</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.scalacheck</groupId>
+                    <artifactId>scalacheck_${scala-language-level}</artifactId>
+                    <version>1.11.5</version>
+                    <scope>test</scope>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.specs2</groupId>
+                    <artifactId>specs2_${scala-language-level}</artifactId>
+                    <version>2.3.13</version>
+                    <scope>test</scope>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.scalatest</groupId>
+                    <artifactId>scalatest_${scala-language-level}</artifactId>
+                    <version>2.2.0</version>
+                    <scope>test</scope>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.scalamock</groupId>
+                    <artifactId>scalamock-core_2.11</artifactId>
+                    <version>3.1.2</version>
+                    <scope>test</scope>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.scalamock</groupId>
+                    <artifactId>scalamock-scalatest-support_2.11</artifactId>
+                    <version>3.1.2</version>
+                    <scope>test</scope>
+                </dependency>
+
+                <dependency>
+                    <groupId>com.typesafe.play</groupId>
+                    <artifactId>play-json_${scala-language-level}</artifactId>
+                    <version>2.3.3</version>
+                    <scope>compile</scope>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.mongodb</groupId>
+                    <artifactId>casbah_${scala-language-level}</artifactId>
+                    <version>2.7.2</version>
+                    <type>pom</type>
+                </dependency>
+            </dependencies>
+
+            <build>
+
+                <plugins>
+                    <plugin>
+                        <groupId>org.scala-tools</groupId>
+                        <artifactId>maven-scala-plugin</artifactId>
+                        <version>2.15.2</version>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>testCompile</goal>
+                                </goals>
+                                <configuration>
+                                    <args>
+                                        <arg>-dependencyfile</arg>
+                                        <arg>${project.build.directory}/.scala_dependencies</arg>
+                                    </args>
+                                    <scalaVersion>${scala-language-level}.1</scalaVersion>
+                                </configuration>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <launchers>
+                                <launcher>
+                                    <id>sample</id>
+                                    <mainClass>ro.jtonic.handson.scalatest.App</mainClass>
+                                    <args>
+                                        <arg>${basedir}</arg>
+                                    </args>
+                                </launcher>
+                            </launchers>
+                        </configuration>
+                    </plugin>
+
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.6</version>
+                        <configuration>
+                            <useFile>false</useFile>
+                            <disableXmlReport>true</disableXmlReport>
+                            <!-- If you have classpath issue like NoDefClassError,... -->
+                            <!-- useManifestOnlyJar>false</useManifestOnlyJar -->
+                            <includes>
+                                <include>**/*Test.*</include>
+                                <include>**/*Suite.*</include>
+                                <include>**/*Spec.*</include>
+                            </includes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
     <repositories>
         <repository>
             <id>typesafe</id>
             <url>http://repo.typesafe.com/typesafe/releases/</url>
+        </repository>
+        <repository>
+            <id>oss-sonatype</id>
+            <name>oss-sonatype</name>
+            <url>https://oss.sonatype.org/content/repositories/releases/</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
         </repository>
     </repositories>
 
