--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,12 @@
                 </dependency>
 
                 <dependency>
+                    <groupId>org.json4s</groupId>
+                    <artifactId>json4s-native_${scala-language-level}</artifactId>
+                    <version>3.2.10</version>
+                </dependency>
+
+                <dependency>
                     <groupId>org.mongodb</groupId>
                     <artifactId>casbah_${scala-language-level}</artifactId>
                     <version>2.7.2</version>
